--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
+  font-family: Lato;
   /* border: 1px solid black; */
 }
