--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  /* font-family: sans-serif; */
+  height: 99.7vh;
   font-family: Lato;
-  /* border: 1px solid black; */
 }
